@@ -16,6 +16,8 @@
  402121 array bounds read when parsing dates in scorefile
  401087 servers.xml's file permissions are too lax (Robert Marshall)
  401449 sort-by-author doesn't work properly (Charles Hill, Jason Mack)
+ 402200 support large article cache sizes (Craig Ruff)
+
 
 0.121 "Dortmunder"
  390784 crash when dragging over URL (Paul Williamson)
